# PiRFHat

./: README.md
hardware/PiRF/: PiRF.kicad_pcb  PiRF.pro  PiRF.sch  PiRF.sch-bak  fp-info-cache  modlog.txt  sym-lib-table
hardware/mechanical/: 538850408.stp  PiRF.SLDASM
software/: README.md  application.py  camera_xfer.py  lora_xfer.py  pirf_rfm9x.py  rf_testing.py  toggle_io.py
software/lora/: CMakeLists.txt  c
software/lora/src/: Gpio.hpp  Spi.hpp  gpiotest.cxx  sx1276-fsk.cxx  sx1276.cxx  sx1276.hpp
software/static/js/: application.js
software/templates/: index.html
